# dradic_technologies

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run_local.sh
app/: app.css  root.tsx  routes.ts
app/components/: AboutSection.tsx  BlogSection.tsx  ContactForm.tsx  Footer.tsx  HeroSection.tsx  Icons.tsx  Layout.tsx  Loader.tsx  MemberCard.tsx  Navbar.tsx  ProjectContainer.tsx  ProjectSection.tsx  SectionContainer.tsx  SectionHeader.tsx
app/module/: apis.ts  firebase.ts  models.ts  projectsConfig.ts  types.ts  utils.ts
app/routes/: AboutPage.tsx  home.tsx  (+7 more)
backend/: pyproject.toml
backend/apis/: .dockerignore  .gitignore  README.md  main.py  models.py  pyproject.toml  run_local.sh  server.py
backend/apis/routers/: blog.py
backend/apis/routers/expense_tracker/: expense_items.py  expenses.py  groups.py  income_sources.py  incomes.py  users.py
backend/apis/utils/: auth.py  db.py  firebase_service.py  supabase_service.py
blog/: package.json
blog_cms/: README.md  package.json
dradic_tech/: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml
expense_tracker/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
expense_tracker_nextjs/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
gym_tracker/: README.md  middleware.ts  next.config.js  package.json  pnpm-lock.yaml
module/: apis.ts  models.ts  projectsConfig.ts
scripts/: setup-env.sh  start.sh
(+321 files in other folders)
